hphp/hack/test/typecheck/goto_mid_statement.php.exp
File "goto_mid_statement.php", line 4, characters 17-17:
An expression is expected here. (Parsing[1002])
