hphp/hack/test/typecheck/goto_mid_statement.php
<?hh

function test(): void {
  $x = 5 + goto L0;
}
